test/files/neg/t8265.scala
class Foo[+CC[X]] { type Coll = CC[_] }
